cration du formulaire d'envoie de mail

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -55,7 +55,8 @@
     <div 
       [ngClass]="mainContentClasses"
       (click)="onMainContentClick()">
-      <app-chat></app-chat>
+      <!-- <app-chat></app-chat> -->
+      <router-outlet></router-outlet>
     </div>
     
     <!-- Sidebar Right -->
