--- a/src/app/pages/sidebar-right/sidebar-right.component.html
+++ b/src/app/pages/sidebar-right/sidebar-right.component.html
@@ -1,4 +1,5 @@
 <div class="sidebar-right"  [class.collapsed]="!isOpen">
+  <h2>Historique pour {{ activeAppId | titlecase }}</h2>
     <button class="new-chat-btn" (click)="newChat()">
       <i class="fas fa-plus me-2"></i>
       NEW CHAT
