permettre au utilisateur de pouvoir generer des emails gratuitements

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -54,7 +54,8 @@
     <!-- Main Content -->
     <div 
       [ngClass]="mainContentClasses"
-      (click)="onMainContentClick()">
+      (click)="onMainContentClick()"
+      >
       <!-- <app-chat></app-chat> -->
       <router-outlet></router-outlet>
     </div>
