--- a/src/app/pages/layouts/header/header.component.html
+++ b/src/app/pages/layouts/header/header.component.html
@@ -22,6 +22,7 @@
 
   <!-- L'utilsateur n'est pas connecter -->
   <div class="user-profile" *ngIf="!isUserConnected">
-    <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+    <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#signupModal">Signup</button>
   </div>
 </div>
