préparation de l'application pour le deployement de la mvp sur vercel

--- a/src/app/pages/layouts/sidebar-left/sidebar-left.component.html
+++ b/src/app/pages/layouts/sidebar-left/sidebar-left.component.html
@@ -23,21 +23,21 @@
 
     <hr class="my-4" style="border-color: rgba(255,255,255,0.1);">
 
-    <div class="app-item" (click)="selectApp('settings')">
+    <!-- <div class="app-item" (click)="selectApp('settings')">
       <div class="app-icon">
         <i class="fas fa-cog"></i>
       </div>
       <div class="flex-grow-1">
         <div class="fw-bold">Settings</div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="app-item" (click)="selectApp('help')">
+    <!-- <div class="app-item" (click)="selectApp('help')">
       <div class="app-icon">
         <i class="fas fa-question-circle"></i>
       </div>
       <div class="flex-grow-1">
         <div class="fw-bold">Help & FAQ</div>
       </div>
-    </div>
+    </div> -->
   </div>
