--- a/src/app/pages/layouts/header/header.component.html
+++ b/src/app/pages/layouts/header/header.component.html
@@ -1,15 +1,15 @@
 <div class="top-header d-flex justify-content-between align-items-center">
   <div class="logo">
     <i class="fas fa-brain"></i>
-    AiWave
+    VibraAI
   </div>
-  <nav class="d-none d-md-flex">
+  <!-- <nav class="d-none d-md-flex">
     <a href="#" class="text-white text-decoration-none mx-3">Home</a>
     <a href="#" class="text-white text-decoration-none mx-3">Tools</a>
     <a href="#" class="text-white text-decoration-none mx-3">Pages</a>
     <a href="#" class="text-white text-decoration-none mx-3">Roadmap</a>
     <a href="#" class="text-white text-decoration-none mx-3">How to use</a>
-  </nav>
+  </nav> -->
 
 <!-- L'utilsateur est connecter et authentifier -->
   <div class="user-profile"  *ngIf="isUserConnected">
