--- a/src/app/pages/layouts/sidebar-right/sidebar-right.component.html
+++ b/src/app/pages/layouts/sidebar-right/sidebar-right.component.html
@@ -1,18 +1,19 @@
-<div class="sidebar-right" [class.collapsed]="!isOpen">
-  <h2>Historique pour {{ activeAppId | titlecase }}</h2>
-  <button class="new-chat-btn" (click)="newChat()">
+<div class="sidebar-right" [class.collapsed]="!isOpen" *ngIf="isconnect">
+  <h2 *ngIf="activeAppId == ''">Emails</h2> <!-- email-generator -->
+  
+  <!-- <button class="new-chat-btn" (click)="newChat()">
     <i class="fas fa-plus me-2"></i>
     NEW CHAT
-  </button>
+  </button> -->
 
-  <div class="mb-4">
+  <!-- <div class="mb-4">
     <input type="text" class="form-control bg-transparent text-white border-secondary" placeholder="Search Here..."
       style="border-radius: 12px;" [(ngModel)]="searchQuery">
-  </div>
+  </div> -->
 
   <div class="" *ngIf="todayItems.length>0">
     <div class="chat-history-date">Today</div>
-    <div class="chat-history-item" *ngFor="let item of todayItems" (click)="selectChat(item)">
+    <div class="chat-history-item"  *ngFor="let item of todayItems" [class.active] (click)="selectChat(item)">
       <div class="fw-bold mb-1">{{ item.title }}</div>
       <!-- <div class="small text-muted">{{ item.preview }}</div> -->
     </div>
@@ -36,7 +37,7 @@
  
   <div class="" *ngIf="olderItems.length>0">
     <div class="chat-history-date mt-4">Older</div>
-    <div class="chat-history-item" *ngFor="let item of olderItems" (click)="selectChat(item)">
+    <div class="chat-history-item active" [class.active] *ngFor="let item of olderItems" (click)="selectChat(item)">
       <div class="fw-bold mb-1">{{ item.title }}</div>
       <!-- <div class="small text-muted">{{ item.preview }}</div> -->
     </div>
